Capturar uma imagem com a câmera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Object detector</string>
     <string name="selecionar_imagem">Selecionar Imagem</string>
+    <string name="capturar_imagem">Capturar imagem</string>
 </resources>
